--- a/pom.xml
+++ b/pom.xml
@@ -3,15 +3,17 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.example</groupId>
-  <artifactId>my-app</artifactId>
+  <artifactId>senifood</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>my-app</name>
+  <name>senifood</name>
   <description>Spring Boot Application</description>
 
   <properties>
     <java.version>17</java.version> <!-- 프로젝트에 사용하는 Java 버전에 맞게 수정 -->
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
     <spring-boot.version>3.3.2</spring-boot.version> <!-- Spring Boot 버전 -->
   </properties>
 
@@ -84,8 +86,6 @@
       </plugin>
     </plugins>
   </build>
-
-
 
   <repositories>
     <repository>
