--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,38 @@
           <executable>${JAVA_HOME}/bin/javac</executable>
         </configuration>
       </plugin>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+            <version>3.3.2</version>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.11.0</version>
+            <configuration>
+              <source>17</source> <!-- 프로젝트에 맞는 Java 버전으로 변경 -->
+              <target>17</target>
+              <fork>true</fork>
+              <executable>${JAVA_HOME}/bin/javac</executable>
+            </configuration>
+          </plugin>
+          <!-- maven-jar-plugin 추가 -->
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <version>3.2.0</version>
+            <configuration>
+              <archive>
+                <manifest>
+                  <addClasspath>true</addClasspath>
+                  <mainClass>likelion.senifood.SenifoodApplication</mainClass> <!-- 실제 메인 클래스를 지정 -->
+                </manifest>
+              </archive>
+            </configuration>
+          </plugin>
     </plugins>
   </build>
 
